# otus-hw4

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  README.md  annotated.html  classes.html  dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_2.map  inherit_graph_2.md5  inherit_graph_3.map  inherit_graph_3.md5  inherit_graph_4.map  inherit_graph_4.md5  inherits.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  md_README.html  pages.html  print_8h.html  print_8h__dep__incl.map  print_8h__dep__incl.md5  print_8h__incl.md5  print_8h_source.html  (+10 more)
docs/: index.html
docs/html/: graph_legend.html  index.html
docs/latex/: refman.tex
include/: print.h
search/: all_2.js  all_3.js  all_4.js  all_5.js  classes_0.js  classes_1.js  functions_2.js  searchdata.js
src/: main.cpp
